--- a/pages/merch.html
+++ b/pages/merch.html
@@ -12,7 +12,7 @@
             <header>
                 <nav class="navbar navbar-expand-lg pe-4 ps-4">
                     <div class="space-between">
-                      <a class="navbar-brand" href="/index.html">HIBISCUS</a>
+                      <a class="navbar-brand" href="../index.html">HIBISCUS</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
