--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Pagina principal" content="Menu de navegacion, imagen de la banda, links donde escuchar las canciones">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     
@@ -11,7 +12,7 @@
 <body>
     <div class="falso-body">
         <header>
-            <nav class="navbar navbar-expand-lg pe-4 ps-4">
+            <nav class="navbar navbar-expand-lg custom-navbar pe-4 ps-4">
                 <div class="space-between">
                   <a class="navbar-brand" href="./index.html">HIBISCUS</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,16 +21,16 @@
                   <div class="collapse navbar-collapse grow" id="navbarSupportedContent">
                     <ul class="navbar-nav justify-content-end mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./pages/quienes-somos.html">Quienes Somos</a>
+                        <a class="nav-link" aria-current="page" href="./pages/quienes-somos.html">Quienes Somos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="./pages/eventos.html">Eventos</a>
+                        <a class="nav-link " href="./pages/eventos.html">Eventos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="./pages/contactanos.html">Contactanos</a>
+                        <a class="nav-link " href="./pages/contactanos.html">Contactanos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="./pages/merch.html">Merch</a>
+                        <a class="nav-link " href="./pages/merch.html">Merch</a>
                       </li>
                     </ul>
                       
@@ -38,18 +39,20 @@
                 </div>
             </nav>
         </header>
+        <!-- imagen de la banda! -->
         <main class="main-index">
             <div>
-                <img src="./assets/img/fuente1.jpg" alt="foto de la banda">
+                <img src="./assets/img/foto-en-fuente.jpg" alt="foto de la banda en una fuente">
             </div>
         </main>
         <footer>
           <div>
-            <img src="./assets/icons/icons8-soundcloud-48.png" alt="icono de soundcloud">
+            <img src="./assets/icons/soundcloud.png" alt="icono de soundcloud">
             <img src="./assets/icons/youtube.png" alt="icono de youtube">
-            <img src="./assets/icons/icons8-spotify-48.png" alt="icono de spotify">
+            <img src="./assets/icons/spotify.png" alt="icono de spotify">
           </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
